tests/sema/fail/v31_fail_cptr_unsafe_struct.ep
# COMPILE_FAIL_CONTAINS: cptr struct Unsafe field text has unsupported FFI type str
struct Unsafe {
    text: str
}

fun main(): void {
    let value = new Unsafe { text: "bad" }
    let p = cptr(value)
}
